# katara

./: .gitignore  index.html  package-lock.json  package.json  plan.md  tailwind.config.js
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: gen_icon.py
src-tauri/src/: error.rs  lib.rs  main.rs  state.rs
src-tauri/src/agui/: bridge.rs  events.rs  mod.rs  server.rs
src-tauri/src/commands/: app.rs  claude.rs  config.rs  mod.rs  skills.rs  terminal.rs
src-tauri/src/config/: manager.rs
src-tauri/src/process/: manager.rs  session.rs
src-tauri/src/skills/: manager.rs  parser.rs
src-tauri/src/terminal/: pty.rs
src-tauri/src/websocket/: protocol.rs  server.rs
src/components/: PermissionModeSelector.tsx  ToolApprovalBanner.tsx
src/stores/: appStore.ts  sessionStore.ts  skillStore.ts
src/tabs/: About.tsx  AgentChat.tsx  ClaudeMd.tsx  Dashboard.tsx  Sessions.tsx  Settings.tsx  Skills.tsx  Terminal.tsx
src/types/: skill.ts
